--- a/index.html
+++ b/index.html
@@ -401,8 +401,8 @@
     <div class="footer-bottom">
       <p>&copy; 2025 Lean StartApp. All rights reserved.</p>
       <div class="footer-bottom-links">
-        <a href="#privacy">Privacy Policy</a>
-        <a href="#terms">Terms of Service</a>
+        <a href="privacy-policy.html">Privacy Policy</a>
+        <a href="terms-of-service.html">Terms of Service</a>
       </div>
     </div>
   </footer>
