change email address

--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
         <div class="contact-info">
           <div class="info-item">
             <span class="material-symbols-outlined">email</span>
-            <p>gosomatu@gmail.com</p>
+            <p>support@leanstart.app</p>
           </div>
           <div class="info-item">
             <span class="material-symbols-outlined">location_on</span>
